# steam-static-shortcuts

./: CMakeLists.txt  build-appimage  readme.md
src/: constants.hpp  game.hpp  main.cpp  shortcut.hpp  shortcuts_file.hpp  tools.hpp  types.hpp
sys/: AppRun  steam-static-shortcuts.desktop
sys/share/metainfo/: steam-static-shortcuts.appdata.xml
